--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,12 @@
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/styles.css">
     </head>
-    <body>
+    <body bgcolor="#ADD8E6">
         <nav>
+            <ul id="user-account">
+                <li><a href="/login">login</a></li>
+                <li><a href="/logout">logout</a></li>
+            </ul>
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/blog">all posts</a></li>
