--- a/templates/blog.html
+++ b/templates/blog.html
@@ -9,7 +9,7 @@
 <h2><a href="/blog/{{ post.key().id() }}">{{ post.title }}</a></h2>
 <p>{{ post.body }}</p>
 <!-- TODO add author w/ link to author's blog page -->
-
+<p><small>Written by <a href= blog/{{username}}> {{username}}</a></small></p>
 {% endfor %}
 
 {% if username %}
